--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .carousel-container {
     width: 51%;
     margin: auto;
-    border: 5px solid black;
+    /* border: 5px solid black; */
     overflow: hidden;
     position: relative;
 }
